--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,30 @@
+#bottom-bar {
+    background: black;
+    color: grey;
+    padding-top: 10px;
+    text-align: center;
+}
+#bottom-bar a {
+        text-decoration: none;
+}
+
 #searcher-container {
     width: 250px;
     padding-bottom: 20px;
 }
 
 #jumbofinder .jumbotron {
-    background: url(../img/cheers.jpg) no-repeat center;
+    background: url(../img/cheers.png) no-repeat center;
     background-size: cover;
     box-shadow: 0 0 40px 5px black;
+    margin: auto;
 }
 
 #jumbobrand .jumbotron {
-    background: url(../img/box.jpg) no-repeat center;
+    background: url(../img/box.png) no-repeat center;
     background-size: cover;
     box-shadow: 0 0 40px 5px black;
+    margin: auto;
 }
 
 #custom-search-form {
